infra/k8s/ingress/006-admin-basic-auth.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: basic-admin-auth
spec:
  basicAuth:
    secret: auth-basic-secret
