infra/k8s/ingress/frikanalen_middlewares.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: fklan-ipwhitelist
spec:
  ipWhiteList:
    sourceRange:
      - 192.168.3.0/24
