infra/k8s/ingress/service_kiloview.yaml
kind: Service
apiVersion: v1
metadata:
  name: kiloview
spec:
  type: ExternalName
  externalName: 192.168.3.168
